<resources>
    <string name="app_name">LibreNews</string>
    <string name="server_settings_label">Server Settings</string>
    <string name="default_server_url">https://librenews.io/api</string>
    <string name="server_url_label">Server</string>
    <string name="refresh_rate_label">Refresh rate</string>
    <string name="notification_preferences_label">Notification Settings</string>
    <string name="notifications_enabled_label">Notifications enabled</string>
    <string name="auto_refresh_label">Automatically refresh</string>
    <string name="server_url_description">The URL of the server to get newsflashes from. Must be HTTPS.</string>
    <string name="auto_refresh_description">Whether LibreNews should automatically refresh in the background.</string>
    <string name="refresh_rate_description">How frequently LibreNews should contact the newsflash server in the background to check for new notifications.</string>
    <string name="notification_sound_label">Notification sound</string>
    <string name="notification_sound_description">The sound that LibreNews will make when a notification is received.</string>
    <string name="notifications_enabled_description">Whether LibreNews shoud send you notifications.</string>
    <string name="internal_storage_setup_fail">Unable to set up internal storage!</string>
    <string name="internal_storage_read_fail">Unable to read from internal storage!</string>
    <string name="invalid_server_url">Invalid server URL!</string>
    <string name="debug_label">Debug</string>
    <string name="debug_mode_label">Debug mode</string>
    <string name="debug_mode_description">Whether LibreNews should send you lots of debug messages (via notifications)</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings">Settings</string>
</resources>
